Adjusted height of Large Horizontal Cards to be auto to prevent overflow issue. Adjusted min-height of Large Horizontal Cards in 'testHome' page.

--- a/src/pages/Home/components/HorizontalCard/HorizontalCard.module.css
+++ b/src/pages/Home/components/HorizontalCard/HorizontalCard.module.css
@@ -1,6 +1,6 @@
 .hori_Card {
    height: 100%;
-   overflow: hidden;
+   overflow: visible;
    box-shadow: 1px 1px 2px lightgray;
 }
 
